# -claude-architect

./: .gitignore  Notes.txt  README.md  first_api_call.py  generate_data.py  myTest.py  pyproject.toml  test.py  test_extract.py  test_tracing.py
agent_platform/: cache.py  config.py  context.py  logging.py  retry.py  tracing.py
projects/p1_customer_support/: architecture.md
projects/p1_customer_support/data/: support.db
projects/p1_customer_support/src/: agent.py  database.py  handoff.py  hooks.py  tools.py
projects/p2_extraction_pipeline/data/invoices/: invoice_01.txt  invoice_02.txt  invoice_03.txt  invoice_04.txt  invoice_05.txt  invoice_06.txt  invoice_07.txt  invoice_08.txt  invoice_09.txt  invoice_10.txt  invoice_11.txt  invoice_12.txt  invoice_13.txt  invoice_14.txt  invoice_15.txt
projects/p2_extraction_pipeline/data/job_postings/: job_posting_01.txt  job_posting_02.txt  job_posting_03.txt  job_posting_04.txt  job_posting_05.txt  job_posting_06.txt  job_posting_07.txt  job_posting_08.txt  job_posting_09.txt  job_posting_10.txt  job_posting_11.txt  job_posting_12.txt  job_posting_13.txt  job_posting_14.txt  job_posting_15.txt
projects/p2_extraction_pipeline/data/menus/: menu_01.txt  menu_02.txt  menu_03.txt  menu_04.txt  menu_05.txt  menu_06.txt  menu_07.txt  menu_08.txt  menu_09.txt  menu_10.txt  menu_11.txt  menu_12.txt  menu_13.txt  menu_14.txt  (+1 more)
projects/p2_extraction_pipeline/src/: extractor.py  router.py  schemas.py  validator.py
tests/: config.py  test_cache.py  test_context.py  test_handoff.py  test_hooks.py  test_platform.py  test_retry.py
(+1 files in other folders)
